<resources>
    <string name="app_name">Story App</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="log_out">Log out</string>
    <string name="story_photo">Story Photo</string>
    <string name="not_story_found">Not story found</string>
    <string name="story_image">Story Image</string>
    <string name="description">Description</string>
    <string name="language">Language</string>
    <string name="new_story_title">New Story</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="add_description">Add Description</string>
    <string name="upload">Upload</string>
    <string name="email_invalid">Email Invalid</string>
    <string name="password_invalid">Password Must be atleast 8 characters</string>
    <string name="login_success">Login Success</string>
    <string name="register_success">Register Success</string>
    <string name="name_invalid">Name can\'t be empty</string>
    <string name="appwidget_text">Story Widget</string>
    <string name="app_widget_description">Show image of dicoding story</string>
    <string name="empty_text">No Data</string>
    <string name="map">map</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="retry">retry</string>
    <string name="add_current_location">add current location</string>
</resources>